--- a/bountifulfoods/Contact/contact.html
+++ b/bountifulfoods/Contact/contact.html
@@ -21,7 +21,7 @@
     <header>
         <div class="first-container">
             <div class="logo-container">
-                <img class="logo" src="../Images/BountifulFoods.webp" alt="Bountiful Foods Logo">
+                <img class="logo" src="../images/BountifulFoods.webp" alt="Bountiful Foods Logo">
                 <section class="site-name-container">
                     <a class="a-home" href="../home.html"><h1>Bountiful Foods</h1></a>
                 </section>
@@ -82,7 +82,7 @@
         <div class="company-footer">
             <div class="company-text">
                 <div class="footer-logo">
-                    <img class="logo" src="../Images/BountifulFoods.webp" alt="Bountiful Foods Logo">
+                    <img class="logo" src="../images/BountifulFoods.webp" alt="Bountiful Foods Logo">
                     <h2>Bountiful Foods</h2>
                 </div>
                 <div>
