--- a/bountifulfoods/home.html
+++ b/bountifulfoods/home.html
@@ -54,7 +54,7 @@
             </div>
             <div class="grid-call-action">
                 <h1>Make your fruit drink mix</h1>
-                <button class="button-3" role="button">Order your drink</button>
+                <a href="./Fresh/fresh.html"><button class="button-3">Order your drink</button></a>
             </div>
             <div class="grid-social">
                 <h1>Social Media</h1>
