--- a/bountifulfoods/Fresh/fresh.html
+++ b/bountifulfoods/Fresh/fresh.html
@@ -93,7 +93,7 @@
               <h2>Your order was created</h2>
               <div class="modal__content">
                 <div>
-                  <h3>Information</h3>
+                  <h3>Personal Information</h3>
                   <hr>
         
                   <div class="form-group">
@@ -110,7 +110,7 @@
                   </div>
                 </div>
                 <div>
-                  <h3>Order information</h3>
+                  <h3>Order Information</h3>
                   <hr>
                   <div class="form-group">
                     <p>Ingredient 1:</p>
