--- a/bountifulfoods/Fresh/fresh.html
+++ b/bountifulfoods/Fresh/fresh.html
@@ -187,5 +187,6 @@
     <script type="module" src="./handleForm.js"></script>
     <script type="module" src="./script.js"></script>
     <script type="module" src="./setIngredients.js"></script>
+    <script src="../app.js" defer></script>
 </body>
 </html>
