--- a/bountifulfoods/Fresh/fresh.html
+++ b/bountifulfoods/Fresh/fresh.html
@@ -91,7 +91,7 @@
             <div class="modal-content">
               <span class="close" id="closeModal">&times;</span>
               <h2>Your order was created</h2>
-              <div class="modal__content">
+              <div class="modal_content">
                 <div>
                   <h3>Personal Information</h3>
                   <hr>
